--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,10 @@
         }
     ],
     "require": {
-        "php": ">=8.0"
+        "php": ">=8.0",
+        "dragonmantank/cron-expression": "^3.4"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.2"
     }
 }
